--- a/apps/hooks/tsconfig.json
+++ b/apps/hooks/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["ES2015"],
-    "module": "CommonJS",
-    "outDir": "./dist",
+    "module": "NodeNext",
+    "outDir": "./dist"
   },
-  "exclude": ["node_modules"],
-  "include": ["."]
+  "exclude": ["node_modules", "dist"],
+  "include": ["./src"]
 }
