--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hooks",
+  "name": "processor",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc -b && node dist/index.js",
+    "start": "tsc -b && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,8 +12,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "express": "^4.21.1",
-    "@repo/database": "*"
+    "kafkajs": "^2.2.4"
   }
 }
