--- a/apps/processor/tsconfig.json
+++ b/apps/processor/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "lib": ["ES2015"],
     "module": "NodeNext",
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist"],
   "include": ["./src"]
