--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@repo/types",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
+    "start": "tsc -b && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
