--- a/apps/hooks/package.json
+++ b/apps/hooks/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc -b && node dist/index.js",
+    "dev": "tsc -b && node dist/index.js",
+    "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
