--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -2,6 +2,7 @@
   "name": "worker",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsc -b && node ./dist/index.js",
     "build": "tsc -b",
@@ -13,6 +14,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "@solana/web3.js": "^1.95.3",
+    "bs58": "^6.0.0",
+    "kafkajs": "^2.2.4",
+    "nodemailer": "^6.9.15"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.16"
   }
 }
