--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsc -b && node ./dist/index.js",
-    "build": "npx prisma generate && tsc -b",
-    "start": "npx prisma generate && node dist/index.js",
+    "build": "tsc -b",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
